yaml/inference.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: yolo-internal
  name: yolo-internal
spec:
  ports:
  - name: http
    port: 8085
    protocol: TCP
    targetPort: 8085
  - name: metrics
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    serving.kserve.io/inferenceservice: yolo
  type: ClusterIP
