yaml/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: frontend
    spec:
      containers:
      - image: ghcr.io/kwkoo/kserve-yolo-frontend
        name: kserve-yolo-frontend
        ports:
        - name: http
          containerPort: 8080
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend
status:
  loadBalancer: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - frontend.demo.svc.cluster.local
  - frontend-demo.apps.demo.com
  gateways:
  - frontend
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 8080
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - frontend-demo.apps.demo.com
